# nfdc-mcp-server

./: README.md  install.sh  main.py  pyproject.toml
nfdc/: __init__.py  constants.py  http.py  parsers.py
nfdc/tools/: __init__.py  comments.py  details.py  documents.py  search.py
